@@ -59,15 +59,10 @@ public class DatabaseCollaboratorRepository implements CollaboratorRepository {
     @Transactional
     public List<Collaborator> saveAll(List<Collaborator> collaborators) {
         try {
-            final List<CollaboratorDto> dtos = collaborators.stream()
-                .map(CollaboratorDto::from)
-                .collect(java.util.stream.Collectors.toList());
-
-            final List<CollaboratorDto> savedDtos = repository.saveAll(dtos);
-
-            return savedDtos.stream()
+            return repository.saveAll(collaborators.stream().map(CollaboratorDto::from).toList())
+                    .stream()
                     .map(CollaboratorDto::toDomainWithoutCompany)
-                    .collect(java.util.stream.Collectors.toList());
+                    .toList();
         } catch (Exception ignored) {
             throw new TechnicalError("Désolé, nous n'avons pas réussi à sauvegarder les collaborateurs.");
         }
